# pico-uart

./: CMakeLists.txt  main.c
include/: commands.h  dht.h  shell.h
src/: commands.c  dht.c  led.c  main.c  shell.c
